Move calculation of each line rect to renderedTextLines() which allowed to handle text alignment correctly

--- a/src/index.scss
+++ b/src/index.scss
@@ -28,6 +28,10 @@ canvas {
   max-height: 80px;
 }
 
+.text--center {
+  text-align: center;
+}
+
 .example {
   display: flex;
   align-items: start;
